2002-06-08  Han-Wen  <hanwen@cs.uu.nl>

	* lily/molecule.cc (translate): set max distance to 100 cm.

2002-06-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.5.60 released

	* lily/beam.cc: tremolo fix.

	* scripts/convert-ly.py:  add tuplet-X-visibility rules.
	add VerticalExtent -> verticalExtent rules.

	* lily/axis-group-engraver.cc: consistent case for
	XxxxVerticalExtent properties.  

	* Documentation/user/refman.itely (Tuplets): update
	tuplet-X-visibility properties. 

	* input/test/defaultbars.ly: Corrected (thanks Mats)
	
2002-06-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam.cc (shift_region_to_valid): fix stupido bug. 

	* buildscripts/lilypond-profile.sh: override settings if
	LILYPONDPREFIX is set.

2002-06-04  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scripts/ly2dvi.py (non_path_environment): Fix typo

2002-06-03  Heikki Junes  <heikki.junes@hut.fi>

	* lilypond-mode.el: Extend "Quick notes" containing note tuples.

	* lilypond-font-lock.el: Add fixes and comments to syntax-table.

2002-06-03  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam-engraver.cc (class Grace_beam_engraver): derive from
	beam-engraver: use different engraver so we can mix normal and
	grace beams.

2002-06-01  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc (shift_region_to_valid): Try to shift positions
	after slope-damping and concaveness check, so that short-stems are
	not violated.

2002-05-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Fix for ash as /bin/sh.

2002-05-31  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION: 1.5.59 released 
	
	* scripts/musedata2ly.py (Parser.parse_note_line): add dots. Add
	notice that missing features are exercise for user.

2002-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (score_stem_lengths): Bugfix for knees: use correct
	(but alas, not partly precomputed) value for current_y when
	calculating stem length demerits.
	(calc_stem_y): Temporary precomputed factors fix.
